parser/sample_tests/ours/bad5.txt

*** Error line 1.
class Binky {
^^^^^
*** syntax error

